# simpleinetd

./: .gitignore  configure.ac
src/: Makefile.am  cfg.c  cfg.h  cfg_l.c  cfg_l.l  cfg_y.c  cfg_y.h  cfg_y.y  simpleinetd.c  simpleinetd.cfg  util.c  util.h
